...
                android:textAlignment="center"
                android:textColor="#294B58"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/user_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/specifications"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/baseline_person_2_24"
...
                android:textColor="#7E7979"
                android:textColorHint="#6C6767"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/specifications"
                android:drawablePadding="10dp"
...
                android:textColorHint="#6C6767"
                android:textSize="20sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_blue_button"
                android:elevation="4dp"
...
