...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileBar"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tag_View"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTagButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:focusable="true"
...
